--- a/JS Core/10_Контрольна робота/Home/style.scss
+++ b/JS Core/10_Контрольна робота/Home/style.scss
@@ -13,7 +13,7 @@
   font-size: 14px;
 }
 
-.block {
+.block, .secondBlock {
   min-height: 250px;
   border-radius: 10px;
   background-color: #f7f7f7;
@@ -252,14 +252,25 @@ h2 {
   span {
     margin-right: 15px;
     font-size: 12px;
-    
+
   }
 }
 
+/*  Second block  */
+.secondBlock{
+  display: none;
+}
 
+.secondBlock.active{
+  display: block;
+}
+.firstBlock{
+  display: none;
+}
 
-
-
+.firstBlock.active{
+  display: block;
+}
 
 
 
