--- a/JS Core/10_Контрольна робота/Home/style.css
+++ b/JS Core/10_Контрольна робота/Home/style.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 700px;
   min-width: 450px;
   margin: auto;
   padding: 0 10px;
@@ -166,7 +166,7 @@ h2 {
   margin-top: 10px;
 }
 
-#fontFamily {
+#fontFamily, #list_style {
   margin-bottom: 10px;
   font-size: 10px;
   width: 220px;
@@ -176,7 +176,7 @@ h2 {
   background: #F5F5F5;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
 }
-#fontFamily:focus {
+#fontFamily:focus, #list_style:focus {
   outline: 1px solid rgba(0, 0, 0, 0.3);
 }
 
@@ -206,7 +206,7 @@ h2 {
   outline: 1px solid black;
   position: absolute;
   top: 75px;
-  right: 135px;
+  right: 40px;
 }
 
 .colors.active, .colors1.active {
@@ -245,6 +245,103 @@ h2 {
 
 .firstBlock.active {
   display: block;
+}
+
+/*  form-list  */
+.create-list, .create-table {
+  display: none;
+}
+
+.create-list.active {
+  display: block;
+}
+
+.create-table.active {
+  display: block;
+}
+
+.btn-create {
+  width: fit-content;
+  display: block;
+  margin: 40px auto 0 0;
+  padding: 5px 10px;
+  background-color: #096909;
+  border-radius: 10px;
+  border: none;
+  color: #f7f7f7;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.btn-create:active {
+  transform: scale(0.8);
+}
+.btn-create:focus {
+  outline: none;
+}
+
+input[type=text]::placeholder {
+  font-size: 8px;
+}
+
+.list {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.list input[type=text] {
+  font-size: 12px;
+  margin-bottom: 10px;
+  margin-left: 65px;
+  padding: 5px 10px;
+  border: none;
+  width: 220px;
+}
+.list input[type=text]:focus {
+  outline: 2px solid #d1f3ff;
+}
+.list p {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+#list_style {
+  margin-left: 35px;
+}
+
+.table {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.table span {
+  display: block;
+}
+.table h2 {
+  font-size: 22px;
+}
+.table input[type=text] {
+  font-size: 12px;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  border: none;
+  width: 85%;
+}
+.table input[type=text]:focus {
+  outline: 2px solid #d1f3ff;
+}
+.table p {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  justify-content: space-between;
+  font-size: 12px;
+}
+.table p:nth-child(6), .table p:nth-child(7), .table p:nth-child(8) {
+  width: calc(33% - 5px);
 }
 
 /*# sourceMappingURL=style.css.map */
