--- a/JS Core/14_RegExp Advanced/Home1/style.css
+++ b/JS Core/14_RegExp Advanced/Home1/style.css
@@ -16,6 +16,7 @@
 .left {
   width: 40%;
   justify-content: space-between;
+  position: relative;
 }
 
 .right {
@@ -42,20 +43,20 @@ input[type=text]:focus, input[type=password]:focus {
   outline: 2px solid aliceblue;
 }
 
-.table {
+.table, .table1 {
   width: 100%;
   font-size: 14px;
   text-align: left;
 }
-.table .tr {
+.table .tr, .table1 .tr {
   border-bottom: 1px solid gainsboro;
 }
-.table TH {
+.table TH, .table1 TH {
   width: 88px;
   border-top: 1px solid gainsboro;
   border-bottom: 1px solid gainsboro;
 }
-.table .td {
+.table .td, .table1 .td {
   width: 88px;
   border-bottom: 1px solid gainsboro;
   padding-top: 5px;
@@ -95,9 +96,9 @@ input[type=text]:focus, input[type=password]:focus {
   color: white;
   font-size: 10px;
   transition: all 0.4s ease-in-out;
-  position: fixed;
-  top: 180px;
-  left: 15px;
+  position: absolute;
+  top: 170px;
+  left: 0px;
   margin: 0;
   display: none;
 }
