--- a/JS Core/14_RegExp Advanced/Home1/style.scss
+++ b/JS Core/14_RegExp Advanced/Home1/style.scss
@@ -16,6 +16,7 @@
 .left {
   width: 40%;
   justify-content: space-between;
+  position: relative;
 }
 
 .right {
@@ -28,38 +29,42 @@ span {
   margin-bottom: 5px;
 }
 
-input[type=text], input[type=password] {
+input[type="text"], input[type="password"] {
   display: block;
   width: 100%;
   height: 20px;
   margin-bottom: 20px;
   border: none;
-}
-input[type=text]::placeholder, input[type=password]::placeholder {
-  font-size: 8px;
-}
-input[type=text]:focus, input[type=password]:focus {
-  outline: 2px solid aliceblue;
+
+  &::placeholder {
+    font-size: 8px;
+  }
+
+  &:focus {
+    outline: 2px solid aliceblue;
+  }
 }
 
-.table {
+.table, .table1 {
   width: 100%;
   font-size: 14px;
   text-align: left;
-}
-.table .tr {
-  border-bottom: 1px solid gainsboro;
-}
-.table TH {
-  width: 88px;
-  border-top: 1px solid gainsboro;
-  border-bottom: 1px solid gainsboro;
-}
-.table .td {
-  width: 88px;
-  border-bottom: 1px solid gainsboro;
-  padding-top: 5px;
-  padding-bottom: 5px;
+
+  .tr{
+    border-bottom: 1px solid gainsboro;
+  }
+
+  TH {
+    width: 88px;
+    border-top: 1px solid gainsboro;
+    border-bottom: 1px solid gainsboro;
+  }
+  .td{
+    width: 88px;
+    border-bottom: 1px solid gainsboro;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
 
 .add-user, .edit-user {
@@ -69,24 +74,26 @@ input[type=text]:focus, input[type=password]:focus {
   color: greenyellow;
   cursor: pointer;
   transition: all 0.4s ease-in-out;
-}
-.add-user:focus, .edit-user:focus {
-  outline: none;
-  background-color: greenyellow;
-  color: white;
+
+  &:focus {
+    outline: none;
+    background-color: greenyellow;
+    color: white;
+  }
 }
 
-.first.active {
+.first.active{
   display: none;
 }
 
-.two {
+.two{
   display: none;
 }
 
-.two.active {
+.two.active{
   display: block;
 }
+
 
 .warn {
   height: 16px;
@@ -95,9 +102,9 @@ input[type=text]:focus, input[type=password]:focus {
   color: white;
   font-size: 10px;
   transition: all 0.4s ease-in-out;
-  position: fixed;
-  top: 180px;
-  left: 15px;
+  position: absolute;
+  top: 170px;
+  left: 0px;
   margin: 0;
   display: none;
 }
@@ -120,11 +127,11 @@ ul {
   justify-content: space-between;
   border-bottom: 1px solid gainsboro;
   font-size: 14px;
-}
-ul li {
-  margin-right: 30px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  li {
+    margin-right: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
 
 a {
@@ -133,9 +140,9 @@ a {
   cursor: pointer;
   transition: all 0.4s ease-in-out;
   font-size: 12px;
-}
-a:hover {
-  transform: scale(0.9);
+  &:hover{
+    transform: scale(0.9);
+  }
 }
 
 .edit, .delete {
@@ -145,9 +152,34 @@ a:hover {
   border-radius: 2px;
 }
 
-.delete {
+.delete{
   background-color: red;
   color: white;
 }
 
-/*# sourceMappingURL=style.css.map */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
